--- a/链表 (2).md
+++ b/链表 (2).md
@@ -17,6 +17,7 @@
 ![](https://cdn.nlark.com/yuque/0/2021/png/21587164/1620659621058-3ddfbd69-7de6-4ce1-bc99-dd5252d9be50.png#align=left&display=inline&height=171&margin=%5Bobject%20Object%5D&originHeight=171&originWidth=531&size=0&status=done&style=none&width=531)
 
 输入：head = [3,2,0,-4], pos = 1
+
 输出：true解释：链表中有一个环，其尾部连接到第二个节点。
 
 **示例2：**
@@ -25,7 +26,10 @@
 ![](https://cdn.nlark.com/yuque/0/2021/png/21587164/1620659642992-7e213e4f-15c9-4b15-895b-bc356dc7e205.png#align=left&display=inline&height=105&margin=%5Bobject%20Object%5D&originHeight=105&originWidth=201&size=0&status=done&style=none&width=201)
 
 输入：head = [1,2], pos = 0
-输出：true解释：链表中有一个环，其尾部连接到第一个节点。
+
+输出：true
+
+解释：链表中有一个环，其尾部连接到第一个节点。
 
 **示例3：**
 
@@ -33,6 +37,7 @@
 ![](https://cdn.nlark.com/yuque/0/2021/png/21587164/1620659652763-2de922ef-c6d2-4018-8d98-5fde4d03bf68.png#align=left&display=inline&height=65&margin=%5Bobject%20Object%5D&originHeight=65&originWidth=65&size=0&status=done&style=none&width=65)
 
 输入：head = [1], pos = -1
+
 输出：false解释：链表中没有环。
 
 **提示：**
