--- a/链表.md
+++ b/链表.md
@@ -7,31 +7,52 @@
 如果链表中有某个节点，可以通过连续跟踪 next 指针再次到达，则链表中存在环。 为了表示给定链表中的环，我们使用整数 pos 来表示链表尾连接到链表中的位置（索引从 0 开始）。 如果 pos 是 -1，则在该链表中没有环。注意：pos 不作为参数进行传递，仅仅是为了标识链表的实际情况。
 
 如果链表中存在环，则返回 true 。 否则，返回 false 。
-**
+
 **进阶：**
 你能用 _O(1)_（即，常量）内存解决此问题吗？
-**
-**示例 1：**
+
+**示例1：**
+
+
 ![](https://cdn.nlark.com/yuque/0/2021/png/21587164/1620659621058-3ddfbd69-7de6-4ce1-bc99-dd5252d9be50.png#align=left&display=inline&height=171&margin=%5Bobject%20Object%5D&originHeight=171&originWidth=531&size=0&status=done&style=none&width=531)
+
 输入：head = [3,2,0,-4], pos = 1
-输出：true解释：链表中有一个环，其尾部连接到第二个节点。
 
-示例 2：
+输出：true
+
+解释：链表中有一个环，其尾部连接到第二个节点。
+
+**示例2：**
+
+
 ![](https://cdn.nlark.com/yuque/0/2021/png/21587164/1620659642992-7e213e4f-15c9-4b15-895b-bc356dc7e205.png#align=left&display=inline&height=105&margin=%5Bobject%20Object%5D&originHeight=105&originWidth=201&size=0&status=done&style=none&width=201)
-输入：head = [1,2], pos = 0
-输出：true解释：链表中有一个环，其尾部连接到第一个节点。
 
-示例 3：
+输入：head = [1,2], pos = 0
+
+输出：true
+
+解释：链表中有一个环，其尾部连接到第一个节点。
+
+**示例3：**
+
+
 ![](https://cdn.nlark.com/yuque/0/2021/png/21587164/1620659652763-2de922ef-c6d2-4018-8d98-5fde4d03bf68.png#align=left&display=inline&height=65&margin=%5Bobject%20Object%5D&originHeight=65&originWidth=65&size=0&status=done&style=none&width=65)
+
 输入：head = [1], pos = -1
-输出：false解释：链表中没有环。
-**
+
+输出：false
+
+解释：链表中没有环。
+
 **提示：**
 
 - 链表中节点的数目范围是 [0, 104]
+
 - -105 <= Node.val <= 105
+
 - pos 为 -1 或者链表中的一个 **有效索引** 。
-### 
+
+  
 
 ### （1）哈希表
 
@@ -83,5 +104,4 @@ class Solution:
         # 若快指针到达链表尾部，说明链表无环
         return False
 ```
-
 
