--- a/链表/160.相交链表.md
+++ b/链表/160.相交链表.md
@@ -76,7 +76,7 @@ class Solution:
         return None
 ```
 
-![img](http://m.qpic.cn/psc?/V512TBad4bullY3gMXFZ1Dt1de1dRK6b/45NBuzDIW489QBoVep5mcXS0I9wEZdxVsNaMyWvYmsXX94fqVTwEHfPX65DhqaLCSHy4RnrN4xrK6eVLUrv8sRqcyxBHAE*MTrs10sCU8Ls!/b&bo=3wKlAAAAAAADF0o!&rf=viewer_4)
+![img](http://m.qpic.cn/psc?/V512TBad4bullY3gMXFZ1Dt1de1dRK6b/ruAMsa53pVQWN7FLK88i5o0zU2rOi52kk.RLV3lAlBUX.9JNtxjamSgIugbGgpggJr1y915raF7Gs4AD*SgUPjFMBl4Y1Zci9MryrNxcRzM!/mnull&bo=3wKlAAAAAAADB1o!&rf=photolist&t=5)
 
 ## （2）双指针
 
@@ -88,7 +88,7 @@ class Solution:
 
 该方法的原理：
 
-![img](http://m.qpic.cn/psc?/V512TBad4bullY3gMXFZ1Dt1de1dRK6b/45NBuzDIW489QBoVep5mceovxQ0Np81oYj3rTory35BzviBU*N2Wgvg.RXoiptJvinc2UfeIm6ox0sWs6x85EiBgW2h.5o.yGOEbr49hzjY!/b&bo=BgIpAQAAAAADJy4!&rf=viewer_4)
+![img](http://m.qpic.cn/psc?/V512TBad4bullY3gMXFZ1Dt1de1dRK6b/ruAMsa53pVQWN7FLK88i5p4iCmZAQixq3Y0mGLDeIPTIMD2WQj1F7nNeumow9zAW9c02uISAISN*eiPoLEqBgP.Lpl1W0GaYnLZ**ZM2YWI!/mnull&bo=BgIpAQAAAAADBw4!&rf=photolist&t=5)
 
 设 headA 到相交部分的距离为 a，headB 到相交部分的距离为 b，两链表的相交部分长度为 c。
 
