--- a/链表/160.相交链表.md
+++ b/链表/160.相交链表.md
@@ -4,7 +4,7 @@
 
 编写一个程序，找到两个单链表相交的起始节点。
 
-如下面的两个链表**：**
+如下面的两个链表：
 
 ![img](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2018/12/14/160_statement.png)
 
