Update 19. 删除链表的倒数第 N 个结点.md

--- a/链表/19. 删除链表的倒数第 N 个结点.md
+++ b/链表/19. 删除链表的倒数第 N 个结点.md
@@ -59,7 +59,7 @@ class Solution:
         return dummy.next 
 ```
 
-![image-20210512212255884](C:\Users\Castle\AppData\Roaming\Typora\typora-user-images\image-20210512212255884.png)
+![img](http://m.qpic.cn/psc?/V512TBad4bullY3gMXFZ1Dt1de1dRK6b/ruAMsa53pVQWN7FLK88i5jUn44dEvQODHxHFUc0jsiM8LYf9CiSAXpU5n.mH4ySqNDYxo*aq9hx*PxVT72f1M9OBJnD56T3Fpjz*nIIK0bQ!/mnull&bo=FAJ7AAAAAAADB08!&rf=photolist&t=5)
 
 ### （2）双指针
 
@@ -85,6 +85,7 @@ class Solution:
         return dummy.next
 ```
 
-![image-20210512213619416](C:\Users\Castle\AppData\Roaming\Typora\typora-user-images\image-20210512213619416.png)
+![img](http://m.qpic.cn/psc?/V512TBad4bullY3gMXFZ1Dt1de1dRK6b/ruAMsa53pVQWN7FLK88i5jUn44dEvQODHxHFUc0jsiM7RVlWVArymsri08e6l4dyDSzhHD9FIRW58jBRzZrtZvJ*Y9rJX2ps.XPii5fXML8!/mnull&bo=DwJ5AAAAAAADB1Y!&rf=photolist&t=5)
 
 这里设置“哑节点”的原因在于，待删除节点有可能是头节点本身，因此需要维护一个新的头节点，而原本的头节点则视为普通节点（非头节点）来进行处理。返回时，返回哑节点的后继节点即可。
+
